# unity-dark-mode

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  README.md  build.bat
.github/workflows/: release.yml
src/: darkmode.cpp  darkmode.h  dllmain.cpp  version.def  version_proxy.asm  version_proxy.cpp  version_proxy.h
